# franka_mover

./: CMakeLists.txt  package.xml
config/: fr3_camera_calibration.yaml  fr3_ros_controllers.yaml
franka_mover/launch/: mover_franka_gazebo.launch copy.py  mover_franka_gazebo.launch.py
launch/: launch_commands  mover_franka_gazebo.launch copy.py  mover_franka_gazebo.launch.py  my_franka_mover.launch.py  mymoveit.launch.py  trasformazione_latex
move_program/: package.xml
move_program/src/: move_program.cpp
runs_v11s/detect/train/: args.yaml  results.csv
rviz/: moveit.rviz  mymoveit.rviz
scripts/: 1_aruco_calibrate.py  2_NEW_franka_mover_topic_PoseStamped_transformed_grasp_cartesian.py  2_franka_mover_topic_PoseStamped_transformed_grasp.py  2_franka_mover_topic_PoseStamped_transformed_grasp_approach.py  2_franka_mover_topic_PoseStamped_transformed_grasp_approach_plates.py  3_apple_recognizer_noCv2_PoseStamped.py  BUGtransform_franka_mover_topic_PoseStamped.py  apple_recognizer_Point.py  apple_recognizer_noCv2_PoseStamped.py  aruco_calibrate.py  aruco_print.py  fr3_camera_calibration.yaml  franka_mover_target.py  franka_mover_target_point_pose.py  franka_mover_topic_PointStamped_pose.py  franka_mover_topic_PoseStamped.py  franka_mover_topic_PoseStamped_transformed.py  franka_mover_topic_PoseStamped_transformed_aruco.py  franka_mover_topic_PoseStamped_transformed_grasp.py  prova nuovo grasp  prova_trasform.py  realsense_starter.py
scripts/basic/: franka_grasper.py  franka_gripper.py  franka_mover_cartesian_path.py  franka_mover_target_point_pose.py  franka_mover_topic_PointStamped_pose.py  franka_mover_topic_PoseStamped_transformed.py  prova_trasform.py
