<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>franka_mover</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="emanuele.arca@yahoo.it">emanuelearca</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>ros_gz</depend>
  <depend>sdformat_urdf</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>franka_description</depend>
  <depend>franka_ign_ros2_control</depend>
  
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>franka_hardware</exec_depend>
  <exec_depend>franka_gripper</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
